# django-precise-bbcode

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .travis.yml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  VERSION  dev-requirements.txt  pyproject.toml  pytest.ini  requirements-doc.freeze  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  conf.py  custom_tags.rst  getting_started.rst  index.rst  quickstart.rst  settings.rst  smilies.rst
docs/basic_reference/: builtin_bbcodes.rst  index.rst  rendering_bbcodes.rst  storing_bbcodes.rst
docs/extending_precise_bbcode/: custom_placeholders.rst  custom_smilies.rst  custom_tags.rst  index.rst
example_project/: manage.py  requirements.txt
example_project/example_project/: urls.py  wsgi.py
example_project/test_messages/: admin.py  bbcode_placeholders.py  bbcode_tags.py  forms.py  models.py  views.py
precise_bbcode/: __init__.py  admin.py  apps.py  fields.py  jinja2tags.py  models.py  parser.py  placeholder_pool.py  shortcuts.py  tag_base.py  tag_pool.py  test.py
precise_bbcode/bbcode/: __init__.py  exceptions.py  parser.py  placeholder.py  regexes.py  tag.py
precise_bbcode/conf/: settings.py
precise_bbcode/core/: compat.py  loading.py  utils.py
precise_bbcode/migrations/: 0001_initial.py  0004_auto__add_smileytag.py  __init__.py
precise_bbcode/south_migrations/: 0001_initial.py  0002_auto__add_field_bbcodetag_transform_newlines.py  0003_auto__add_field_bbcodetag_end_tag_closes.py  0004_auto__add_smileytag.py
precise_bbcode/templatetags/: bbcode_tags.py
precise_bbcode/tests/: __init__.py  test_fields.py  test_parser.py  test_smilies.py  test_tags.py  test_templatetags.py
precise_bbcode/utils/: bbcode.py  compat.py
src/example_project/: requirements.txt
tests/: models.py  settings.py
tests/_testsite/: urls.py
(+73 files in other folders)
