[flake8]
exclude = migrations,tests,example_project,build,docs,.tox,.venv
ignore = E731
max-line-length = 100

[isort]
default_section = THIRDPARTY
force_single_line=true
known_first_party = precise_bbcode
line_length=100
lines_after_imports = 2
not_skip = __init__.py
skip=migrations,_testsite

[metadata]
license-file = LICENSE

[wheel]
universal = 1
